--- a/emvs.Rmd
+++ b/emvs.Rmd
@@ -25,8 +25,8 @@ plot(x[3,],x[1,])
 ## Initialization
 ```{r}
 set.seed(5)
-v0 = 0.01
-v1 = 1
+v0 = 0.05
+v1 = 10
 beta = matrix(0.5,p,p)
 diag(beta) = 0
 #beta = rep(1,p)
@@ -50,7 +50,7 @@ d = ((1-prob)/v0+prob/v1)
 
 ## M-step
 for (i in 1:p) {
-  beta[i,-i] = solve(x%*%t(x)+diag(as.vector(d[i,])),x%*%(x[i,]))
+  beta[i,-i] = solve(x[-i,]%*%t(x[-i,])+diag(as.vector(d[i,-i])),x[-i,]%*%(x[i,]))
 }
 #beta = solve(t(x)%*%x+diag(d),t(x)%*%y)
 #beta = (diag(1/d)-diag(1/d)%*%t(x)%*%solve(matrix(1,n,n)+x%*%diag(1/d)%*%t(x),x%*%diag(1/d)))%*%t(x)%*%y
